Moved down collapse area and fixed top nav bar so it's responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.container {
+.top-Nav {
   background-color: white;
   border-bottom: 2px solid #D8DAD3;
   height: 56px;
